<resources>
    <string name="mine_name">用户模块</string>
    <string name="mine_edi_login_account_hint">用户名/手机/邮箱</string>
    <string name="mine_tv_login_privacy">已阅读并同意<u>服务协议和隐私政策</u></string>
    <string name="mine_str_login">登录</string>
    <string name="mine_str_get_code">获取验证码</string>
    <string name="mine_str_tip_input_code">请输入验证码</string>
    <string name="mine_str_tip_input_mob">请输入手机号</string>
    <string name="mine_str_setting">设置</string>
    <string name="mine_str_edi_avatar">编辑</string>
    <string name="mine_str_user_level_tag">筑龙新友</string>
    <string name="mine_str_nick_name">昵称</string>
    <string name="mine_str_honor_score">荣誉分</string>
    <string name="mine_str_default_value_0">0</string>
    <string name="mine_str_zhulong_coin">筑龙币</string>
    <string name="mine_str_study_time">学习时长</string>
    <string name="mine_str_send_posts_num">发帖数</string>
    <string name="mine_str_she_qun">社群</string>
    <string name="mine_str_ping_ce">评测</string>
    <string name="mine_str_you_hui_juan">优惠卷</string>
    <string name="mine_str_express">快递</string>
    <string name="mine_str_my_lesson">我的课程</string>
    <string name="mine_str_already_buy_class">已购课程</string>
    <string name="mine_str_dai_fu_kuan">待付款</string>
    <string name="mine_str_lesson_shou_cang">课程收藏</string>
    <string name="mine_str_huan_cun">缓存</string>
    <string name="mine_str_my_data">我的资料</string>
    <string name="mine_str_data_collection">资料收藏</string>
    <string name="mine_str_my_she_qu">我的社区</string>
    <string name="mine_str_watch_history">观看记录</string>
    <string name="mine_str_wo_de_hui_fu">我的回复</string>
    <string name="mine_str_guan_zhu_xiao_zu">关注小组</string>
    <string name="mine_str_guan_zhu_long_you">关注龙友</string>
    <string name="mine_str_liu_lan_ji_lu">浏览记录</string>
    <string name="mine_str_my_posts">我的发帖</string>
    <string name="mine_str_li_pin_dui_huan">礼品兑换</string>
    <string name="mine_str_apk_version">筑龙学社: 2.5.9</string>
    <string name="mine_str_zi_xun">欢迎咨询：400-900-8066</string>
    <string name="mine_str_online_kefu">在线联系客服</string>
    <string name="mine_str_min">分钟</string>
    <string name="mine_str_fan_kui">反馈</string>
    <string name="mine_str_xia_zai">下载</string>
    <string name="mine_str_shang_chuan">上传</string>
    <string name="mine_str_evip">E会员</string>
    <string name="mine_str_please_input_pwd">请输入密码</string>
    <string name="mine_str_qu_hao">区号</string>
    <string name="mine_str_register_account">注册新账号</string>
    <string name="mine_str_forget_pwf">忘记密码</string>
    <string name="mine_third_login">第三方账号登录</string>
    <string name="mine_str_account_login">账号登录</string>
    <string name="mine_code_login">验证码登录</string>
    <string name="mine_str_login_register">登录 / 注册</string>
    <string name="mine_str_more_gift">更多礼品</string>

</resources>