<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:binding="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="loginViewModel"
            type="com.zhulong.mine.view.login.LoginViewModel" />
    </data>
    <RelativeLayout
        tools:context=".view.login.LoginActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_color_f4">
        <ImageView
            android:id="@+id/login_iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:tag="close"
            binding:onClickCommand="@{loginViewModel.otherClick}"
            android:src="@drawable/base_ic_close_gray"
            tools:ignore="ContentDescription" />
        <LinearLayout
            android:layout_below="@id/login_iv_close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/base_ic_logo_shadow"
                tools:ignore="ContentDescription" />
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/login_tab"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                binding:tabTextAppearance="@style/TabLayoutTextStyle"
                binding:tabBackground="@android:color/transparent"
                binding:tabRippleColor="@android:color/transparent"
                binding:tabIndicatorFullWidth="false"
                binding:tabSelectedTextColor="@color/base_red"
                binding:tabTextColor="@color/base_font_gray"
                binding:tabIndicatorColor="@color/base_red">
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_str_account_login"/>
                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_code_login"/>
            </com.google.android.material.tabs.TabLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:padding="3dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/mine_shape_bg_grey_stroke_line_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/lin_account_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp">
                        <AutoCompleteTextView
                            android:id="@+id/login_name"
                            android:layout_width="match_parent"
                            android:layout_height="44.5dp"
                            android:layout_centerVertical="true"
                            android:background="@color/base_color_f6"
                            android:hint="@string/mine_edi_login_account_hint"
                            android:imeOptions="actionNext"
                            android:paddingStart="20dp"
                            binding:textChanged="@{loginViewModel.accountEdiChangeListener}"
                            android:singleLine="true"
                            android:text="@={loginViewModel.userName}"
                            android:textColor="@color/base_font_black"
                            android:textColorHint="@color/base_font_gray"
                            android:textSize="15sp"
                            tools:ignore="RtlSymmetry" />

                        <ImageView
                            android:id="@+id/iv_clear"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/mine_ic_delete"
                            android:visibility="@{loginViewModel.clearBtnVisibility}"
                            android:tag="clearAccountOnClickCommand"
                            binding:onClickCommand="@{loginViewModel.otherClick}"
                            android:padding="10dp"
                            tools:ignore="ContentDescription" />
                    </RelativeLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/base_color_ea" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="44.5dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/login_password"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@color/base_color_f6"
                            android:hint="@string/mine_str_please_input_pwd"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:paddingStart="20dp"
                            android:text="@={loginViewModel.password}"
                            android:textColor="@color/base_font_black"
                            android:textColorHint="@color/base_font_gray"
                            android:textSize="15sp"
                            binding:textChanged="@{loginViewModel.pwdEdiChangeListener}"
                            tools:ignore="RtlSymmetry"
                            android:importantForAutofill="no" />

                        <ImageView
                            android:id="@+id/iv_show_eye"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_gravity="center_vertical"
                            android:padding="10dp"
                            android:tag="passwordShowSwitchOnClickCommand"
                            binding:onClickCommand="@{loginViewModel.otherClick}"
                            android:visibility="@{loginViewModel.pwdVisibility}"
                            binding:isThrottleFirst="@{true}"
                            android:src="@drawable/mine_selector_login_eye"
                            tools:ignore="ContentDescription" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lin_code_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:focusable="true"
                    android:visibility="gone"
                    android:focusableInTouchMode="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal" >

                        <AutoCompleteTextView
                            android:id="@+id/et_area_code"
                            android:layout_width="80dp"
                            android:layout_height="45dp"
                            android:background="@null"
                            android:padding="10dp"
                            android:hint="@string/mine_str_qu_hao"
                            android:inputType="phone"
                            android:maxLength="5"
                            android:imeOptions="actionNext"
                            android:text="+86"
                            android:singleLine="true"
                            android:gravity="center"
                            android:textColor="@color/base_font_black"
                            android:textColorHint="@color/base_font_gray"
                            android:textSize="15sp"
                            tools:ignore="HardcodedText" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="15dp"
                            android:layout_marginTop="15dp"
                            android:background="@color/base_color_line" />

                        <AutoCompleteTextView
                            android:id="@+id/et_phone"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:background="@null"
                            android:hint="@string/mine_str_tip_input_mob"
                            android:inputType="phone"
                            android:imeOptions="actionNext"
                            android:paddingStart="20dp"
                            android:singleLine="true"
                            android:textColor="@color/base_font_black"
                            android:textColorHint="@color/base_font_gray"
                            android:textSize="15sp"
                            tools:ignore="RtlSymmetry" />

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/base_color_line" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_check_num"
                            android:layout_width="0dp"
                            android:layout_height="40dp"
                            android:layout_weight="1"
                            android:background="@null"
                            android:hint="@string/mine_str_tip_input_code"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLines="1"
                            android:paddingStart="20dp"
                            android:textColor="@color/base_font_black"
                            android:textColorHint="@color/base_font_gray"
                            android:textSize="15sp"
                            android:importantForAutofill="no"
                            tools:ignore="RtlSymmetry" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:background="@color/base_color_line" />

                        <android.widget.TextView
                            android:id="@+id/btn_send_code"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/mine_str_get_code"
                            android:textColor="@color/base_red"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
            <Button
                android:id="@+id/login_btn_login"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/base_selector_red_pink"
                android:tag="ZLLogin"
                binding:onClickCommand="@{loginViewModel.clickLogin}"                android:text="@string/mine_str_login"
                android:textColor="@color/base_white"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.widget.TextView
                    android:id="@+id/login_tv_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingBottom="5dp"
                    android:paddingEnd="20dp"
                    android:paddingTop="5dp"
                    android:text="@string/mine_str_register_account"
                    android:textColor="@color/base_font_gray"
                    android:tag="registerAccount"
                    binding:onClickCommand="@{loginViewModel.clickLogin}"
                    android:textSize="14sp"
                    tools:ignore="RtlSymmetry" />

                <android.widget.TextView
                    android:id="@+id/login_tv_forget_pwd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:paddingBottom="5dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="5dp"
                    android:text="@string/mine_str_forget_pwf"
                    android:tag="forgetPwd"
                    binding:onClickCommand="@{loginViewModel.clickLogin}"
                    android:textColor="@color/base_font_gray"
                    android:textSize="14sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="50dp"
                    android:layout_height="1dp"
                    android:background="@color/base_color_line" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/mine_third_login"
                    android:textColor="@color/base_font_gray"
                    android:textSize="12sp" />

                <View
                    android:layout_width="50dp"
                    android:layout_height="1dp"
                    android:background="@color/base_color_line" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/login_iv_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="5dp"
                    android:tag="QQLogin"
                    binding:onClickCommand="@{loginViewModel.clickLogin}"
                    android:src="@drawable/mine_ic_qq_login"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/login_iv_wx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:tag="WeChatLogin"
                    binding:onClickCommand="@{loginViewModel.clickLogin}"
                    android:padding="5dp"
                    android:src="@drawable/mine_ic_wx_login"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/login_iv_check_box_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:tag="checkedAgreementOnClickCommand"
                    binding:onClickCommand="@{loginViewModel.otherClick}"
                    binding:isThrottleFirst="@{true}"
                    android:src="@drawable/mine_selector_login_pravicy"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/login_iv_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="startAgreementPage"
                    binding:onClickCommand="@{loginViewModel.otherClick}"
                    android:text="@string/mine_tv_login_privacy"
                    android:textColor="@color/base_font_gray"
                    android:textSize="12sp"/>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</layout>
